# dedicatorias

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
core/: auth.py  backup.py  config.py  contacts.py  correction.py  diff.py  history.py  models.py  rendering.py  storage.py  templates.py  transcription.py
pages/: 1_Plantillas.py  2_Generar_dedicatoria.py  3_Historial.py  4_Destinatarios.py  5_Backup.py
